--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/react": "^18.2.21",
     "chrome-launcher": "^1.2.1",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "^14.2.33",
     "lighthouse": "^13.0.1",
     "next-sitemap": "^4.2.3",
     "prop-types": "^15.8.1",
