style: unify Prefeitura icons and highlight hover states (institutional gold)

--- a/vercel.json
+++ b/vercel.json
@@ -6,18 +6,50 @@
       "use": "@vercel/next"
     }
   ],
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "bebidaselada.com"
+        }
+      ],
+      "destination": "https://www.bebidaselada.com.br/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.bebidaselada.com"
+        }
+      ],
+      "destination": "https://www.bebidaselada.com.br/:path*",
+      "permanent": true
+    }
+  ],
   "headers": [
     {
-      "source": "/static/(.*)",
+      "source": "/(.*)",
       "headers": [
         {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "key": "Strict-Transport-Security",
+          "value": "max-age=63072000; includeSubDomains; preload"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
         }
       ]
     },
     {
-      "source": "/:path*",
+      "source": "/static/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
