--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "node scripts/check-port.mjs && next dev --port 3000",
     "dev:3000": "node scripts/check-port.mjs && next dev --port 3000",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "node scripts/check-port.mjs && next start -p 3000",
     "lint": "next lint",
-    "audit": "node scripts/audit-check.mjs"
+    "audit": "node scripts/audit-check.mjs",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
@@ -22,6 +24,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^10.0.0",
     "stripe": "^14.0.0",
     "tailwindcss": "^3.4.1"
